Create worker to parse image's labels

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VISION_KEYFILE='/home/zhk/projects/amelia/config/credentials/video-webmaster-project-e8cdb47977ea.json'
 VISION_PROJECT='video-webmaster-project'
+REDIS_DATA_STORE_URL='redis://127.0.0.1:6379/0'
