Implement search results page + multiple improvements for search page + introduce search limits

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VISION_PROJECT='video-webmaster-project'
 REDIS_DATA_STORE_URL='redis://127.0.0.1:6379/0'
 INSTANGRAM_API_CLIENT_ID='7c58d5abfaf640abaad6a629fe529057'
 INSTANGRAM_API_CLIENT_SECRET='886d1e34ba074c9087e93887deebe65f'
+MAX_SEARCH_PER_DAY=15
