--- a/spec/fixtures/vcr_cassettes/instagram_media_recent.yml
+++ b/spec/fixtures/vcr_cassettes/instagram_media_recent.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://api.instagram.com/v1/tags/k_test/media/recent?access_token=fake_token
+    uri: http://api.instagram.com/v1/tags/k_test/media/recent?access_token=fake_token&count=8
     body:
       encoding: US-ASCII
       string: ''
@@ -21,7 +21,7 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Location:
-      - https://api.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token
+      - https://api.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token&count=8
       Cache-Control:
       - private, no-cache, no-store, must-revalidate
       Pragma:
@@ -49,7 +49,7 @@ http_interactions:
   recorded_at: Wed, 11 Oct 2017 10:51:19 GMT
 - request:
     method: get
-    uri: https://api.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token
+    uri: https://api.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token&count=8
     body:
       encoding: US-ASCII
       string: ''
@@ -64,7 +64,7 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Location:
-      - https://www.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token
+      - https://www.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token&count=8
       Cache-Control:
       - private, no-cache, no-store, must-revalidate
       Pragma:
@@ -90,7 +90,7 @@ http_interactions:
   recorded_at: Wed, 11 Oct 2017 10:51:19 GMT
 - request:
     method: get
-    uri: https://www.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token
+    uri: https://www.instagram.com/publicapi/v1/tags/k_test/media/recent?access_token=fake_token&count=8
     body:
       encoding: US-ASCII
       string: ''
@@ -105,7 +105,7 @@ http_interactions:
       Content-Type:
       - text/html; charset=utf-8
       Location:
-      - https://api.instagram.com/v1/tags/k_test/media/recent?access_token=fake_token
+      - https://api.instagram.com/v1/tags/k_test/media/recent?access_token=fake_token&count=8
       Cache-Control:
       - private, no-cache, no-store, must-revalidate
       Pragma:
@@ -133,7 +133,7 @@ http_interactions:
   recorded_at: Wed, 11 Oct 2017 10:51:19 GMT
 - request:
     method: get
-    uri: https://api.instagram.com/v1/tags/k_test/media/recent?access_token=fake_token
+    uri: https://api.instagram.com/v1/tags/k_test/media/recent?access_token=fake_token&count=8
     body:
       encoding: US-ASCII
       string: ''
