--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database amelia_test;' -U postgres
+script:
+  - bundle exec rspec spec/
