--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VISION_KEYFILE='/home/zhk/projects/amelia/config/credentials/video-webmaster-project-e8cdb47977ea.json'
 VISION_PROJECT='video-webmaster-project'
+REDIS_URL='redis://127.0.0.1:6379/0'
 REDIS_DATA_STORE_URL='redis://127.0.0.1:6379/0'
 INSTANGRAM_API_CLIENT_ID='7c58d5abfaf640abaad6a629fe529057'
 INSTANGRAM_API_CLIENT_SECRET='886d1e34ba074c9087e93887deebe65f'
