--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-VISION_KEYFILE='/home/zhk/projects/amelia/config/credentials/video-webmaster-project-e8cdb47977ea.json'
 VISION_PROJECT='video-webmaster-project'
 REDIS_DATA_STORE_URL='redis://127.0.0.1:6379/0'
+REDIS_URL='redis://127.0.0.1:6379/0'
 MAX_SEARCH_PER_DAY=100
