--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,5 +7,5 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url:  <%= ENV.fetch("REDIS_URL") %>
   channel_prefix: amelia_production
