--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,13 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database amelia_test;' -U postgres
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - bundle exec rspec spec/
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 env:
-  - VISION_KEYFILE='/home/travis/build/ZhKostev/amelia/config/credentials/video-webmaster-project-e8cdb47977ea.json' VISION_PROJECT='video-webmaster-project'
+  global:
+    - CC_TEST_REPORTER_ID=1ec5f722ff5351ed072e48b2619eb71c8293fcd849709bb9ab7b7306e8766096 VISION_KEYFILE='/home/travis/build/ZhKostev/amelia/config/credentials/video-webmaster-project-e8cdb47977ea.json' VISION_PROJECT='video-webmaster-project'
